--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "alpinejs": "^3.13.5",
     "rxjs": "~7.8.0",
+    "swiper": "^11.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
