--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "emailjs-com": "^3.2.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.6",
     "tslib": "^2.3.0",
